--- a/package.json
+++ b/package.json
@@ -5,10 +5,25 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "cls && nodemon server.js"
+    "dev": "cls && nodemon server.js",
+    "start": "node server.js"
   },
-  "keywords": ["node"],
+  "keywords": [
+    "node"
+  ],
   "author": "Luiz",
   "license": "MIT",
-  "description": "Bruxinhos"
+  "description": "Bruxinhos",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Lzin019/bruxos-.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Lzin019/bruxos-/issues"
+  },
+  "homepage": "https://github.com/Lzin019/bruxos-#readme",
+  "dependencies": {
+    "express": "^5.1.0",
+    "nodemon": "^3.1.10"
+  }
 }
